@@ -62,6 +62,7 @@ CAY-2531 Importing same schema after Import Revert clears all entities in datama
 CAY-2533 Modeler: Exception on validating ObjRelationship without db path
 CAY-2535 Imposible to import stored proceedure apart from db tables
 CAY-2537 Generate DB Schema: Schema Generation Complete popup window is hidden
+CAY-2547 CayenneDataObject serialization issue
 
 ----------------------------------
 Release: 4.1.M2
